
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dirent {scalar_t__ d_type; int d_name; } ;


 scalar_t__ DT_LNK ;
 scalar_t__ strchr (int ,char) ;

__attribute__((used)) static int dirfilter(const struct dirent *d) {
  return d->d_type == DT_LNK && strchr(d->d_name, ':');
}
